# kancolatex

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  __main__.py  database.py  path.py  utils.py
src/data/: db_drop.sql
src/data/kc3/: query_ship_name_en_by_key.sql
src/data/kcwiki/: query_ship_by_id.sql  query_ship_by_name_japanese.sql
src/data/noro6/: query_master_equipment_by_id.sql  query_master_ship_by_id.sql
src/kancolatex/: __main__.py  logger.py  utils.py
src/kancolatex/data/: db_create.sql
src/kancolatex/data/eo/: query_fit_bonus_all.sql  query_fit_bonus_by_equipment_id.sql  query_fit_bonus_by_equipment_type.sql
src/kancolatex/data/kc3/: query_equipment_name_en_by_key.sql
src/kancolatex/data/kcwiki/: query_equipment_by_id.sql  query_equipment_by_name_japanese.sql
src/kancolatex/services/noro6/: common_calc.py
src/kancolatex/services/preprocessor/: macro.py  process.py
src/kancolatex/services/translator/: translator.py
src/kancolatex/types/: __init__.py  air_calc_result.py  const.py
src/kancolatex/types/noro6/: __init__.py  air_calc_result.py  convert.py
src/services/noro6/: common_calc.py
src/services/preprocessor/: macro.py  process.py
src/types/: __init__.py  air_calc_result.py  const.py  equipment_id.py  ship_id.py
src/types/deck_builder/: __init__.py
src/types/eo_en/: __init__.py  fit_bonus_result.py
src/types/kcwiki_en/: __init__.py
src/types/noro6/: __init__.py  convert.py
src/types/noro6/enemy/: enemy_master.py
src/types/serialization/: air_control_simulator.py  deck_builder.py
(+90 files in other folders)
