[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kancolatex"
version = "0.0.1"
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "httpx >= 0.27.0",
    "pydantic >= 2.7.1",
    "typing_extensions",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["kancolatex[test]"]

[project.scripts]
kancolatex = "src.kancolatex.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests"]
