[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kancolatex"
version = "0.0.3"
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "httpx >= 0.27.0",
    "pydantic >= 2.7.1",
    "typing_extensions",
    "python-dotenv",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["kancolatex[test]", "isort >= 5.13.2"]

[project.scripts]
kancolatex = "src.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.isort]
py_version = 310
profile = "black"
force_single_line = "true"
